fix: minor appearance adjustments

--- a/public/tournamenter-obr/views/rescue_scorer_2022_regional.html
+++ b/public/tournamenter-obr/views/rescue_scorer_2022_regional.html
@@ -147,8 +147,8 @@
         </div>
 
         <div style="display: flex; align-items: center;">
-          <div style="background-color: black; height: 6px; width: 24px; margin-left: 12px;"></div>
-          <div style="background-color: black; height: 6px; width: 24px; margin-left: 12px; margin-right: 8px;"></div>
+          <div style="background-color: black; height: 6px; width: 20px;"></div>
+          <div style="background-color: black; height: 6px; width: 20px; margin-left: 12px; margin-right: 8px;"></div>
           <h5>Gaps</h5>
         </div>
         <div class="btn-group btn-group-justified">
@@ -188,7 +188,7 @@
 
       <div class="thumbnail">
         <div style="display: flex; align-items: center;">
-          <img src="/tournamenter-obr/images/rampa.png" style="height: 24px; margin-right: 16px;" />
+          <img src="/tournamenter-obr/images/rampa.png" style="height: 18px; margin-right: 8px;" />
           <h4>Rampa</h4>
         </div>
         <div class="btn-group btn-group-justified">
@@ -319,7 +319,7 @@
           <label class="btn btn-default" ng-model="scoreData.rescueKit"
             btn-radio="1">Entregue (Robô)</label>
           <label class="btn btn-default" ng-model="scoreData.rescueKit"
-            btn-radio="2">Entregue (Pista)</label>
+            btn-radio="2">Entregue (Trajeto)</label>
         </div>
 
 
