--- a/public/tournamenter-obr/views/rescue_scorer_2022_regional.html
+++ b/public/tournamenter-obr/views/rescue_scorer_2022_regional.html
@@ -8,9 +8,17 @@
     width: 0.000001%;
     min-width: 50px;
   }
+  .header-overhead {
+    margin-top: 8px;
+  }
+  @media only screen and (max-width: 720px) {
+    .header-overhead {
+      margin-top: 80px;
+    }
+  }
 </style>
 
-<div class="container" ng-show="timer.data.value == 0 && scorings.total == 0 ">
+<div class="container header-overhead" ng-show="timer.data.value == 0 && scorings.total == 0 ">
   <div class="jumbotron">
       <h1>Aguardando...</h1>
       <p>Para começar a pontuar, inicie o cronômetro</p>
@@ -33,8 +41,7 @@
 
     <div class="col-md-6 col-sm-6"
       ng-init="k = 'first'">
-
-      <div class="thumbnail">
+      <div class="thumbnail header-overhead">
         <div style="display: flex; align-items: center;">
           <img src="/tournamenter-obr/images/marcador.png" style="height: 32px; margin-right: 8px;" />
           <h5>Marcador 1</h5>
