--- a/public/tournamenter-obr/views/scorer.html
+++ b/public/tournamenter-obr/views/scorer.html
@@ -29,7 +29,7 @@
 				</div>
 			</div>
 
-			<div class="btn-group pull-left" style="margin-left: 10px;">
+			<!-- <div class="btn-group pull-left" style="margin-left: 10px;">
 
 				<div class="btn navbar-btn btn-default" ng-click="timer.increment(-60)" ng-class="{disabled: timer.data.value == 0}">
 					-1 Min
@@ -39,7 +39,7 @@
 					+1 Min
 				</div>
 
-			</div>
+			</div> -->
 
 			<div class="btn-group navbar-btn pull-right">
 				<div class="btn btn-default disabled" disabled style="min-width: 50px;">
