fix invertida typo

--- a/public/tournamenter-obr/views/rescue_scorer_2023_regional.html
+++ b/public/tournamenter-obr/views/rescue_scorer_2023_regional.html
@@ -211,7 +211,7 @@
           <label class="btn btn-default" ng-model="scoreData.victims_dead.total" btn-radio="5">5</label>
         </div>
 
-        <h4>Vítimas <span style="color:red">Vivas</span> ou <span style="color:green">Mortas</span> Entregue na Área Invetida</h4>
+        <h4>Vítimas <span style="color:red">Vivas</span> ou <span style="color:green">Mortas</span> Entregue na Área Invertida</h4>
         <div class="btn-group btn-group-justified">
           <label class="btn btn-default" ng-model="scoreData.victims_switched.total" btn-radio="0">0</label>
           <label class="btn btn-default" ng-model="scoreData.victims_switched.total" btn-radio="1">1</label>
