--- a/public/tournamenter-obr/views/rescue_scorer_2023_regional.html
+++ b/public/tournamenter-obr/views/rescue_scorer_2023_regional.html
@@ -24,11 +24,11 @@
           <span class="input-group-addon">{{scorings.squares1['initial'] || 0}} pts</span>
         </div>
 
-        <div ng-repeat="mark in [1, 2, 3, 4, 5, 6]">
+        <div ng-repeat="mark in [1, 2, 3, 4]">
           <h4>{{mark}}º Marcador</h4>
           <div class="row">
 
-            <div class="col-md-3 col-xs-4">
+            <div class="col-md-4 col-xs-4">
               <p>1ª Tentativa</p>
               <div class="">
                 <select ng-model="scoreData.squares1[mark]">
@@ -42,10 +42,10 @@
               </div>
             </div>
 
-            <div class="col-md-3 col-xs-4">
+            <div class="col-md-4 col-xs-4">
               <p>2ª Tentativa</p>
               <div class="">
-                <select ng-model="scoreData.squares2[mark]">
+                <select ng-model="scoreData.squares2[mark]" ng-disabled="scorings.squares1[mark] > 0">
                   <option value="0" selected="true">0</option>
                   <option
                     ng-repeat="k in [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50]"
@@ -56,10 +56,10 @@
               </div>
             </div>
 
-            <div class="col-md-3 col-xs-4">
+            <div class="col-md-4 col-xs-4">
               <p>3ª Tentativa</p>
               <div class="">
-                <select ng-model="scoreData.squares3[mark]">
+                <select ng-model="scoreData.squares3[mark]"  ng-disabled="scorings.squares1[mark] > 0 || scorings.squares2[mark] > 0 ">
                   <option value="0" selected="true">0</option>
                   <option
                     ng-repeat="k in [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50]"
@@ -70,7 +70,7 @@
               </div>
             </div>
 
-            <div class="col-md-3 col-xs-4">
+            <!-- <div class="col-md-3 col-xs-4">
               <p>Falhas de Progresso</p>
               <div class="">
                 <select ng-model="scoreData.fails[mark]">
@@ -79,9 +79,8 @@
                     ng-repeat="k in [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50]"
                     value="{{k}}">{{k}}</option>
                 </select>
-                <!-- <div> -->
               </div>
-            </div>
+            </div> -->
 
           </div>
         </div>
