--- a/public/tournamenter-obr/obr-home.ejs
+++ b/public/tournamenter-obr/obr-home.ejs
@@ -39,7 +39,7 @@
     </a>
   </div>
 
-  <!-- <div class="col-md-6 col-sm-6">
+  <div class="col-md-6 col-sm-6">
     <a href="/obr-desafio" target="_blank" class="no-decoration">
       <div class="jumbotron">
         <h1 class="text-center"><i class="fa fa-question" aria-hidden="true"></i></h1>
@@ -49,7 +49,7 @@
         </p>
       </div>
     </a>
-  </div> -->
+  </div>
 
 </div>
 
