fix: rampa, +1-1 e texto de vitma morta

--- a/public/tournamenter-obr/views/rescue_scorer_2023_nacional.html
+++ b/public/tournamenter-obr/views/rescue_scorer_2023_nacional.html
@@ -215,7 +215,7 @@
           <label ng-show="scoreData.victims['total'] >= 2" class="btn btn-default" ng-model="scoreData.victims_alive.total" btn-radio="2">2</label>
         </div>
 
-        <h4>Vítima Morta salva DEPOIS da viva na área de resgate <span style="color: red;">VERMELHA</span></h4>
+        <h4>Vítima Morta salva na área de resgate <span style="color: red;">VERMELHA</span>, depois que TODAS as vivas foram salvas</h4>
         <div class="btn-group btn-group-justified">
           <label class="btn btn-default" ng-model="scoreData.victims_dead.total" btn-radio="0">0</label>
           <label class="btn btn-default" ng-model="scoreData.victims_dead.total" btn-radio="1">1</label>
