fix: fix pack for regional 2024

--- a/public/tournamenter-obr/obr-desafio.ejs
+++ b/public/tournamenter-obr/obr-desafio.ejs
@@ -124,7 +124,7 @@
         </div>
 
         <!-- Desafios -->
-        <div ng-repeat="id in [1, 2, 3]">
+        <div ng-repeat="id in [2, 3]">
           <div class="alert alert-warning" ng-show="!selectedScore['desafio'+id]">
             <div class="pull-right">
               <button
